--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <img src="a20f716b-1aec-4635-b125-8e577e3c1272 (1).jpg" alt="Profile Photo" class="photo">
+            <img src="img1.jpg" alt="Profile Photo" class="photo">
             <h2>James Bryan M. Singuay</h2>
             <h3>Graduating BSIT Student</h3>
             <div>
@@ -116,3 +116,4 @@
     </div>
 </body>
 </html>
+
